# pdf_markdown_translator

./: .gitignore  README.md  app.py  app_config.json  pyproject.toml
.github/workflows/: release.yml
pdf_app/: __init__.py  config.py  gui.py  markdown_translator.py  models.py  nvidia_models.py  paths.py  service.py
