[project]
name = "pdf-to-markdown-app"
version = "0.1.0"
description = "Desktop app for converting a PDF into Markdown and extracted images."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "markdown>=3.8",
  "requests>=2.32.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
